Hibernate 6.x Upgrade Changes